v.0.2.2

- bugfix: convert bool and int variables on save


v.0.2.1

- moved repo to 'knot-system' organization on GitHub
- updated default theme to v.0.2.1
- bugfix for some setting fields not saving


v.0.2.0

- renamed to 'Knot Control' (was 'Homestead Control')
- updated default theme to v.0.2.0


v.0.1.0

- initial release
- change settings for installed modules
- update all installed modules